test_files/syntax_errors/invalid_method_call_2.java
public class Factorial{
    public static void main(String[] a){
    }
}

class Element {
    public boolean Init(){
        int test;

        test = this.Bar(a,);
        test = this.Bar(,a);
        System.out.println(int);
        return false;
    }

    public int Bar(int a, boolean b){
        return 1;
    }
}
